--- a/Debian.mw
+++ b/Debian.mw
@@ -97,18 +97,31 @@ Then the device should be visible using
 xfce is small and lightweight and so quite fast for the Freerunner.
 
  apt-get install xfce4
+ cp /etc/init.d/zhone-session /etc/init.d/xfce
 
-Then you may hack /etc/init.d/zhone-session making
+Then you may hack /etc/init.d/xfce making
 
  PROG_FSO=/usr/bin/startxfce4
 
-..reboot and check it out...  The desktop took awhile to start but once up was snappy as can be expected.
+Customize the boot process :
+
+ update-rc.d -f zhone-session remove
+ update-rc.d -f xfce defaults
+
+edit your /etc/hosts to have :
+
+ 127.0.0.1 localhost debian-gta02
+
+Start XFCE !
+
+ /etc/init.d/zhone-session stop
+ /etc/init.d/xfce start
+
+The desktop takes a while to start but once up was snappy as can be expected.
 I've not yet looked at the reason for the seemingly too slow start for the desktop.
 
 zhone is available from the "Office" menu in xfce.
 The matchbox keyboard is available in "Accessories".
-
-You could create a different init.d start script for xfce instead of hacking...
 
 = Miscellaneous =
 == Making the cursor invisible ==
