Robot: Changing Category:GTA02 Hardware

--- a/Neo_FreeRunner.mw
+++ b/Neo_FreeRunner.mw
@@ -57,4 +57,4 @@ Please see the [[FreeRunner: Selected Blogs and Articles]] to get more reviews. 
 == External links ==
 *[http://www.brax4your.net/omoko 3D model of Neo FreeRunner, click and drag to rotate]
 
-[[Category:GTA02 Hardware| ]]
+[[Category:Neo FreeRunner Hardware| ]]
