Robot: Changing Category:GTA02 Hardware

--- a/Accessories.mw
+++ b/Accessories.mw
@@ -9,4 +9,4 @@ This is a list of some accessories for [[Neo 1973]] and [[Neo FreeRunner]].
 *[[InvisibleShield]]
 
 [[Category:Neo1973 Hardware]]
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
