--- a/Analog_wired_Headset.mw
+++ b/Analog_wired_Headset.mw
@@ -24,5 +24,5 @@ tip = mic electret condenser type, to ground.
 
 [[Category:Hardware]]
 [[Category:Neo1973 Hardware]]
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
 [[Category:Used chip]]
