Robot: Changing Category:GTA02 Hardware

--- a/Booting_the_Neo_FreeRunner_via_U-Boot.mw
+++ b/Booting_the_Neo_FreeRunner_via_U-Boot.mw
@@ -77,6 +77,5 @@ When flashing the device via USB connection, you must choose ''Set console to US
 
 </td></tr></table>
 
-
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
 [[Category:Guides]]
