Robot: Changing Category:GTA02 Hardware

--- a/Flashing_NOR.mw
+++ b/Flashing_NOR.mw
@@ -67,4 +67,4 @@ You could check the NOR image sample in following address:
 
 [http://people.openmoko.org/tony_tu/GTA02/images/20080321_gta02_rc1/ GTA02 NOR image sample]
 
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
