Robot: Changing Category:GTA02 Hardware

--- a/FreeRunner_GPS_antenna_repair_SOP.mw
+++ b/FreeRunner_GPS_antenna_repair_SOP.mw
@@ -30,5 +30,5 @@ http://wiki.openmoko.org/wiki/Freerunner_Hardware_Issues#GPS_Slow_TTFF
 [[Image:Gps.JPG|500px|center]]
 
 [[Category:Hardware]]
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
 [[Category:GPS]]
