Robot: Changing Category:GTA02 Hardware

--- a/FreeRunner%2FButtons_and_LEDs.mw
+++ b/FreeRunner%2FButtons_and_LEDs.mw
@@ -165,5 +165,4 @@ The following is an example "fireworks"-file that can be used to test the led bl
  0 0 1 100
  1 1 1 100
 
-
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
