Robot: Changing Category:GTA02 Hardware

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -85,9 +85,6 @@ These are issues that have been discussed in the past, but have been fixed (or t
 * Excessive LED current - Some early units lacked a current-limiting resistor for the LEDs. This has been fixed for the production units.
 * Battery life - At this time it appears that the Freerunner battery life will be acceptable once suspend/resume support has been implemented in software.
 * slow GPS TTFF - see [[GPS Problems]]
-[[Category:GTA02 Hardware]]
-
-
 ==== Empty NOR Flash ====
 
 Issue: NOR flash (backup copy of u-boot) is not programmed. [http://docs.openmoko.org/trac/ticket/1568 #1568]
@@ -133,3 +130,5 @@ Documentation for the SMedia 3362 has been promised ([http://lists.openmoko.org/
 
 === Power Management on the Neo1973/Freerunner===
 The current battery life of the Neo1973 and Freerunner is not satisfactory. A lot of changes seem to be necessary to the kernel, drivers and related user-space applications. Hopefully the situation will improve over time.
+
+[[Category:Neo FreeRunner Hardware]]
