--- a/Neo_FreeRunner_Memory_Mapping.mw
+++ b/Neo_FreeRunner_Memory_Mapping.mw
@@ -9,4 +9,4 @@ nCS5: 28000000 2FFFFFFF  nothing mapped <br>
 nCS6: 30000000 37FFFFFF  on-MCP SDRAM 128MB <br>
 nCS7: 38000000 3FFFFFFF  external SDRAM 128MB <br>
 
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
