--- a/Neo_FreeRunner_Openness.mw
+++ b/Neo_FreeRunner_Openness.mw
@@ -92,4 +92,4 @@ there are [http://ibot.rikers.org/%23openmoko/20080423.html.gz no current plans]
 |-
 |}
 
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
