Robot: Changing Category:GTA02 Hardware

--- a/Neo_FreeRunner_partitions.mw
+++ b/Neo_FreeRunner_partitions.mw
@@ -76,4 +76,4 @@ mtd4: 03d1c000 00004000 "rootfs"
 See also [[partitions]].
 
 [[Category:System Developers]]
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
