Robot: Changing Category:GTA02 Hardware

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -426,6 +426,5 @@ To search this wiki with Google, use the following search term:
 
  <search term> site:http://wiki.openmoko.org/wiki/
 
-
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
 [[Category:Guides]]
