Robot: Changing Category:GTA02 Hardware

--- a/Howto_Test_Your_GPS_with_agpsui.mw
+++ b/Howto_Test_Your_GPS_with_agpsui.mw
@@ -117,7 +117,7 @@ http://wiki.openmoko.org/wiki/FreeRunner_GPS_antenna_repair_SOP
 http://wiki.openmoko.org/wiki/USB_Networking
 http://en.wikipedia.org/wiki/Global_Positioning_System
 
-[[category:GPS]]
-[[category:GTA02 Hardware]]
+[[Category:GPS]]
+[[Category:Neo FreeRunner Hardware]]
 [[Category:Hardware]]
 [[Category:Guides]]
