--- a/IPhone.mw
+++ b/IPhone.mw
@@ -108,5 +108,5 @@ Unconfirmed expandable with [http://www.techtree.com/India/News/Samsung_Readies_
  |}
 {{Languages|iPhone}}
 
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
 [[Category:Information]]
