--- a/LM4853.mw
+++ b/LM4853.mw
@@ -10,5 +10,5 @@
 ** speaker4102: (LEFTOUT/BLTOUT-, BLTOUT+);
 ** headset-jack: ring 2 (RIGHTOUT), ring 3 (LEFTOUT/BLTOUT-) via 1uF-33R each
 
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
 [[Category:Used chip]]
