--- a/Neo_1973_vs_Neo_FreeRunner.mw
+++ b/Neo_1973_vs_Neo_FreeRunner.mw
@@ -114,5 +114,5 @@ You can buy the debug board for USD 99.
  |-
  |}
 
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
 [[Category:Information]]
