Robot: Changing Category:GTA02 Hardware

--- a/Neo_FreeRunner_Battery.mw
+++ b/Neo_FreeRunner_Battery.mw
@@ -62,4 +62,5 @@ It is probably a good idea to check that your battery is not greater than the st
 
 == USB charger ==
 {{main|USB charger}}
-[[Category:GTA02 Hardware]]
+
+[[Category:Neo FreeRunner Hardware]]
