Robot: Changing Category:GTA02 Hardware

--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -161,4 +161,4 @@ This'll put the Freerunner in to powered USB host mode, then just plug in the ke
  echo "device" > /sys/devices/platform/s3c2410-ohci/usb_mode
  echo "0" > /sys/devices/platform/neo1973-pm-host.0/hostmode
 
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
