Robot: Changing Category:GTA02 Hardware

--- a/Neo_FreeRunner_GPS.mw
+++ b/Neo_FreeRunner_GPS.mw
@@ -307,5 +307,5 @@ sys.stdout.write(chr(cs0)+chr(cs1))
 == GPS applications ==
 {{main|GPS applications}}
 
-[[category:GPS]]
-[[category:GTA02 Hardware]]
+[[Category:GPS]]
+[[Category:Neo FreeRunner Hardware]]
