Robot: Changing Category:GTA02 Hardware

--- a/Neo_FreeRunner_GPS_Software_Fix_Test_Report.mw
+++ b/Neo_FreeRunner_GPS_Software_Fix_Test_Report.mw
@@ -22,5 +22,5 @@ It was found that the OpenMoko FreeRunner GPS has a long Time To First Fix (TTFF
 | Date || Location || Image used
 |-
 
-[[category:GPS]]
-[[category:GTA02 Hardware]]
+[[Category:GPS]]
+[[Category:Neo FreeRunner Hardware]]
