Robot: Changing Category:GTA02 Hardware

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -331,8 +331,7 @@ __NOTOC__
 *[[USB Networking with openSUSE]]
 *[[Dfu-util-windows]]
 *[[SHR Development]]
-*[[category:GTA02 Hardware]]
-*[[Pre-Flash Backup]]
+**[[Pre-Flash Backup]]
 *[[Howto Test Your GPS with agpsui]]
 *[[GPS Problems]]
 *[[Building Openmoko 2007.1 from scratch]]
@@ -525,5 +524,6 @@ __NOTOC__
 
 |}
 
+[[Category:Neo FreeRunner Hardware]]
 [[Category:Information| ]]
 [[Category:Openmoko| ]]
