Robot: Changing Category:GTA02 Hardware

--- a/Support.mw
+++ b/Support.mw
@@ -82,4 +82,4 @@ Application projects source forge
 
 [[Category:Openmoko]]
 [[Category:Information]]
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
