Robot: Changing Category:GTA02 Hardware

--- a/Neo_USB_charger_specifications_and_compatibility_list.mw
+++ b/Neo_USB_charger_specifications_and_compatibility_list.mw
@@ -112,9 +112,8 @@ This 12V cigarette lighter adapter charger comes with the O2 Xda Orbit 2 (HTC Po
 *HTC Polaris (tested on O2 Xda Orbit 2)
 *Garmin Edge
 
-
 [[Category:Hardware]]
 [[Category:Neo1973 Hardware]]
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
 [[Category:Battery]]
 [[Category:USB]]
