Robot: Changing Category:GTA02 Hardware

--- a/Wifiweasel.mw
+++ b/Wifiweasel.mw
@@ -359,5 +359,5 @@ produces output in the form of
 <br> "ESSID_NAME1" 1 -82 on
 <br> "ESSID_NAME2" 1 -49 off
 
-[[category:Technical ]]
-[[category:GTA02 Hardware]]
+[[Category:Technical]]
+[[Category:Neo FreeRunner Hardware]]
