Robot: Changing Category:GTA02 Hardware

--- a/Neo_FreeRunner_Wifi.mw
+++ b/Neo_FreeRunner_Wifi.mw
@@ -263,6 +263,5 @@ Programs in development providing GUI interfaces to administer WiFi connections:
 
 * [http://www.hpl.hp.com/personal/Jean_Tourrilhes/Linux/ WiFi on Linux]
 
-
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
 [[Category:Networking]]
