/* Use the GPS */  fixed tangogps installation, becaus it is in default repos

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -379,7 +379,9 @@ To test GPS, you can use agpsui:
 
 For a nice map, try [[tangoGPS]]:
 
- # opkg install http://www.tangogps.org/downloads/tangogps_0.9.2-r1_armv4t.ipk
+ # opkg install tangogps
+
+or download it from [http://www.tangogps.org/downloads/tangogps_0.9.2-r1_armv4t.ipk].
 
 There were critical [[GPS Problems]] earlier that are largely fixed in newest kernels, see the instructions above to install the updates. More information is on the [[GPS]] page.
 
