--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -397,7 +397,7 @@ There are plenty of development opportunities to integrate these functions in th
 
 === Testing a new distribution ===
 
-[[Om 2008.8]] is the successor to Om 2007.2 (and had ASU as a codename). It was launched on August 08, 2008. You may wish to test it or install it in place of the stock 2007.2 distribution you've just got to know.
+[[Om 2008.8]] is the successor to Om 2007.2 (and had ASU as a codename). It was launched on August 08, 2008. You may wish to test it or (if you feel adventurous) install it in place of the stock 2007.2 distribution you've just got to know.
 
 === Welcome to the community ===
 
