/* Software for biking */ Link to Navit added

--- a/Biking.mw
+++ b/Biking.mw
@@ -32,5 +32,7 @@ The Freerunner has three different [[Forcing_fast_charge_mode|charging modes]]: 
 == Software for biking ==
 
 * [[TangoGPS]]
+* [[Navit]]
+* [[Installing Pyroute|Pyroute]]
 
 [[Category:Technical]]
