Robot: Changing Category:GTA02 Hardware/cs

--- a/Neo_FreeRunner%2Fcs.mw
+++ b/Neo_FreeRunner%2Fcs.mw
@@ -55,4 +55,4 @@ Také vás může zajímat stránka [[Freerunner Hardware Issues]].
 == Externí odkazy ==
 *[http://www.brax4your.net/omoko interaktivní 3D model Neo FreeRunneru]
 
-[[Category:GTA02 Hardware/cs| ]]
+[[Category:Neo FreeRunner Hardware/cs| ]]
