Robot: Changing Category:GTA02 Hardware/cs

--- a/Manuals%2FNeo_FreeRunner%2Fcs.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fcs.mw
@@ -534,5 +534,5 @@ To search this wiki with Google, use the following search term:
 
 An excellent tool for searching all the openmoko mailing lists is http://openmoko.markmail.org/
 
-[[Category:GTA02 Hardware/cs]]
+[[Category:Neo FreeRunner Hardware/cs]]
 [[Category:Guides]]
