Robot: Changing Category:GTA02 Hardware/de

--- a/Manuals%2FNeo_FreeRunner%2Fde.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fde.mw
@@ -271,4 +271,4 @@ Wer mehr über den FreeRunner wissen möchte, findet hier weitere Infos:
 * [[Neo FreeRunner GTA02 Hardware]]
 * [[FreeRunner/Buttons and LEDs]]
 
-[[Category:GTA02 Hardware/de]]
+[[Category:Neo FreeRunner Hardware/de]]
