--- a/IPhone%2Fde.mw
+++ b/IPhone%2Fde.mw
@@ -82,5 +82,5 @@ Auf der MacWorld wurde das [http://www.apple.com/iphone/technology/specs.html iP
  |}
 {{Languages|iPhone}}
 
-[[Category:GTA02 Hardware/de]]
+[[Category:Neo FreeRunner Hardware/de]]
 [[Category:Information/de]]
