Robot: Changing Category:GTA02 Hardware/ee

--- a/Neo1973:_GTA01Bv4_versus_GTA02_comparison%2Fee.mw
+++ b/Neo1973:_GTA01Bv4_versus_GTA02_comparison%2Fee.mw
@@ -88,5 +88,5 @@ Laiendatav [http://www.techtree.com/India/News/Samsung_Readies_8GB_microSD_Card/
 {{Languages|Neo1973: GTA01Bv4 versus GTA02 comparison}}
 
 [[Category:Neo1973 Phase 1 related/ee]]
-[[Category:GTA02 Hardware/ee]]
+[[Category:Neo FreeRunner Hardware/ee]]
 [[Category:Information/ee]]
