--- a/Neo_FreeRunner%2Fes.mw
+++ b/Neo_FreeRunner%2Fes.mw
@@ -54,4 +54,4 @@ Visita los [[FreeRunner: Selected Blogs and Articles]] para tener mas opiniones.
 == Enlaces externos ==
 *[http://www.brax4your.net/omoko Modelo 3d del Neo FreeRunner, click y arrastra para hacerlo rotar]
 
-[[Category:GTA02 Hardware/es| ]]
+[[Category:Neo FreeRunner Hardware/es| ]]
