--- a/Neo_FreeRunner%2Ffa.mw
+++ b/Neo_FreeRunner%2Ffa.mw
@@ -56,7 +56,6 @@ Please see the [[FreeRunner: Selected Blogs and Articles]] to get an impression
 
 == External links ==
 *[http://www.brax4your.net/omoko 3D model of Neo FreeRunner, click and drag to rotate]
-
-[[Category:GTA02 Hardware/fa| ]]
-
 </div>
+
+[[Category:Neo FreeRunner Hardware/fa| ]]
