Robot: Changing Category:GTA02 Hardware/fr

--- a/FreeRunner_Overview%2Ffr.mw
+++ b/FreeRunner_Overview%2Ffr.mw
@@ -6,4 +6,4 @@ Openmoko est une distribution de logiciels qui fonctionnent sur une plate-forme 
 
 </div>
 
-[[Category:GTA02 Hardware/fr]]
+[[Category:Neo FreeRunner Hardware/fr]]
