Robot: Changing Category:GTA02 Hardware/fr

--- a/Manuals%2FNeo_FreeRunner%2Ffr.mw
+++ b/Manuals%2FNeo_FreeRunner%2Ffr.mw
@@ -258,4 +258,4 @@ Si vous souhaitez en savoir plus sur le FreeRunner, vous pouvez obtenir davantag
 * [[Neo FreeRunner GTA02 Hardware]]
 * [[FreeRunner/Buttons and LEDs]]
 
-[[Category:GTA02 Hardware/fr]]
+[[Category:Neo FreeRunner Hardware/fr]]
