Robot: Changing Category:GTA02 Hardware/fr

--- a/Neo_FreeRunner_GTA02_Hardware%2Ffr.mw
+++ b/Neo_FreeRunner_GTA02_Hardware%2Ffr.mw
@@ -19,4 +19,4 @@ Image:GTA02 A5 PCB PS.jpg|Vue avant (circuit imprimé) NOTE: GTA02 A5 PCB
 Image:SimpleComponentDiagram.jpg|Diagramme simplifié des composants matériels
 </gallery>
 
-[[category:GTA02 Hardware/fr]]
+[[Category:Neo FreeRunner Hardware/fr]]
