Robot: Changing Category:GTA02 Hardware/it

--- a/Neo1973:_GTA01Bv4_versus_GTA02_comparison%2Fit.mw
+++ b/Neo1973:_GTA01Bv4_versus_GTA02_comparison%2Fit.mw
@@ -69,5 +69,5 @@ Forse espandibile con [http://www.techtree.com/India/News/Samsung_Readies_8GB_mi
 {{Languages|Neo1973: GTA01Bv4 versus GTA02 comparison}}
 
 [[Category:Neo1973 Phase 1 related/it]]
-[[Category:GTA02 Hardware/it]]
+[[Category:Neo FreeRunner Hardware/it]]
 [[Category:Information/it]]
