*Empty MediaWiki Message*

--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -1,7 +1,5 @@
 {{Languages|Bootloader}}
 
-
-
 {{Bootloader}}
 [[Image:GTA01-U-Boot.JPG|thumb|300px|u-boot menu on Neo1973]] [[Image:Neo1973 uboot splash closeup.jpg|thumb|300px|u-boot splash screen on Neo1973]]
 
@@ -9,10 +7,11 @@ The bootloader on the [[Neo1973]], '''U-Boot''', takes care of device functional
 
 There are various [[bootloader versions]] available.
 
-== Phase0 Quick Start ==
+== Booting into U-boot ==
+
 * Make sure that your phone has had the battery and USB cable removed for at least 30 seconds.
-* Connect the Neo (ie not Debug Board) to a Linux host with the USB cable.
 * Hold in the AUX button on power-up to access the boot menu.
+* Connect the Neo (ie not Debug Board) to a Linux host with the USB cable.
 * Set the console to USB.
 * Connect to /dev/ttyACM0 with a terminal program on the Linux host (you might need to chown uucp.uucp /dev/ttyACM0 )
 * Note that the cdc_acm /dev/ttyACM0 access disappears as soon as the Neo boots, and is replaced by the cdc_ether usb0 network access.
@@ -55,7 +54,12 @@ To build u-boot:
 
 == Bootloader binary ==
 
-The latest bootloader binary builds can be found under http://buildhost.openmoko.org/daily/ in the subdirectory [device]/200808/[date]/.  It should be written to the NAND flash address 0x00000000 (size 0x30000) (the first [[partition]]).
+The latest bootloader binary builds can be found under http://buildhost.openmoko.org/daily/ in the subdirectory [device]/200808/[date]/.
+
+All versions of the GTA02 (Neo Freerunner) that have been sold to the public are version 5 hardware so look for a file with "gta02" and "v5" in the name, for example
+uboot-gta02v5-latest.bin
+
+The file should be written to the NAND flash address 0x00000000 (size 0x30000) (the first [[partition]]).
 
 == Bootloader development ==
 
