Robot: Changing Category:GTA02 Hardware/nl

--- a/Neo_FreeRunner%2Fnl.mw
+++ b/Neo_FreeRunner%2Fnl.mw
@@ -141,5 +141,4 @@ The Openmoko Wiki is open. Everyone can join. You'll find information including:
 
 <font color=426fdc>※</font>[[:Category: Help |  See More About Help ]]
 
-
-[[Category:GTA02 Hardware/nl| ]]
+[[Category:Neo FreeRunner Hardware/nl| ]]
