Robot: Changing Category:GTA02 Hardware/nl

--- a/IPhone%2Fnl.mw
+++ b/IPhone%2Fnl.mw
@@ -84,5 +84,5 @@ iPhone Gebruikers Interface voorbeeld op youtube http://youtube.com/watch?v=YgW7
  |}
 {{Languages|iPhone}}
 
-[[Category:GTA02 Hardware/nl]]
+[[Category:Neo FreeRunner Hardware/nl]]
 [[Category:Information/nl]]
