--- a/Manuals%2FNeo_FreeRunner%2Fpl.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fpl.mw
@@ -404,4 +404,4 @@ To search this wiki with Google, use the following search term:
    <search term> site:http://wiki.openmoko.org/wiki/
 An excellent tool for searching all the openmoko mailing lists is http://openmoko.markmail.org/
 
-[[Category:GTA02 Hardware/pl]]
+[[Category:Neo FreeRunner Hardware/pl]]
