Robot: Changing Category:GTA02 Hardware/se

--- a/Manuals%2FNeo_FreeRunner%2Fse.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fse.mw
@@ -246,4 +246,4 @@ If you want to know more about FreeRunner, you can get more information in follo
 * [[Neo FreeRunner GTA02 Hardware]]
 * [[FreeRunner/Buttons and LEDs]]
 
-[[Category:GTA02 Hardware/se]]
+[[Category:Neo FreeRunner Hardware/se]]
