--- a/Neo_FreeRunner_GTA02_Hardware%2Fzh_cn.mw
+++ b/Neo_FreeRunner_GTA02_Hardware%2Fzh_cn.mw
@@ -431,4 +431,4 @@ kernel在 /proc/cpuinfo输出 system_rev 变数
 **NCC验证码： CCAF08DG0080T0 
 **[http://people.openmoko.org/tony_tu/GTA02/certificate/NCC NCC test report]
 
-[[Category:GTA02 Hardware/zh cn]]
+[[Category:Neo FreeRunner Hardware/zh cn]]
