*Empty MediaWiki Message*

--- a/Biking.mw
+++ b/Biking.mw
@@ -34,5 +34,10 @@ The Freerunner has three different [[Forcing_fast_charge_mode|charging modes]]: 
 * [[TangoGPS]]
 * [[Navit]]
 * [[Installing Pyroute|Pyroute]]
+* [http://wiki.openstreetmap.org/index.php/Rana| Rana]
+
+== See also ==
+
+* http://wiki.openmoko.org/wiki/GPS_applications
 
 [[Category:Technical]]
