--- a/NXP_PCF50633.mw
+++ b/NXP_PCF50633.mw
@@ -1,13 +1,32 @@
-* Function: Power Management
+{| border=1  cellspacing='0' cellpadding=5
+|-
+| valign='top' | Feature
+| Power Management
+|-
+| valign='top' | Specification
+| 
+|-
+| valign='top' | Product Homepage
+| 
+|-
+| valign='top' | Product User Manuel
+| http://people.openmoko.org/tony_tu/GTA02/datasheet/PMU/PCF50633UM_6.pdf
+|-
+| valign='top' | Product Datasheet
+| http://people.openmoko.org/tony_tu/GTA02/datasheet/PMU/PCF50633DS_02.pdf
+|-
+| valign='top' | Driver
+| https://svn.openmoko.org/trunk/src/target/kernel/patches/pcf50633.patch
+|-
+| valign='top' | Freedom Requirements
+| 
+* Datasheet/User manual usage  [http://lists.openmoko.org/pipermail/community/2008-March/013898.html was legally authorized by NXP]
+* Special thanks NXP provide full user manual and support openness for all developer
+|}
 * NXP PMU index: [http://www.nxp.com/products/power_management/pmu/index.html NXP PMU index page]<br>
-* Product Datasheet: [http://people.openmoko.org/tony_tu/GTA02/datasheet/PMU/PCF50633DS_02.pdf NXP PCF50633 Product Data Sheet]<br>
-* Product User manual: [http://people.openmoko.org/tony_tu/GTA02/datasheet/PMU/PCF50633UM_6.pdf NXP PCF50633 User Manual]<br>
-**Special thanks NXP provide full user manual and support openness for all developer
-**Datasheet/User manual usage  [http://lists.openmoko.org/pipermail/community/2008-March/013898.html was legally authorized by NXP]
 
 ==Neo FreeRunner==
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
-* Connected to: [[Samsung_S3C2442B_B54]] via I2C, client address is 0x08. <br>
-* Driver Source: https://svn.openmoko.org/trunk/src/target/kernel/patches/pcf50633.patch<br>
+* Connected to: [[Samsung_S3C2442B]] via I2C, client address is 0x08. <br>
 
 [[Category:Used chip]]
