--- a/Neo_FreeRunner_Hardware_Requirements.mw
+++ b/Neo_FreeRunner_Hardware_Requirements.mw
@@ -1,4 +1,4 @@
-These are the requirements used to select the [[Neo FreeRunner GTA02 Hardware]] components.
+These are the requirements used to select the [[Neo FreeRunner Hardware]] components.
 
 =Features=
 *Display-   Topply o2.8, 480 x 640 pixels, VGA, 200 NIT minimum, resistance type touch 
