--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -95,28 +95,8 @@ These end up in mixed content. They could be removed and content migrated to mor
 | [[Openmoko/de]], [[Openmoko/es]], [[Openmoko/fr]], [[Openmoko/it]], [[Openmoko/ru]], [[Openmoko/zh tw]] || [[Openmoko]] has already been deleted by [[User:Sean|Sean]] || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |}
 
-== [[User:DolfjeBot1|DolfjeBot1]] proposals ==
-Their is a bot on the openmoko wiki that's controlled by [[User:Dolfje]]. If you have tasks for the bot, please put them here.
-
-{| border=1 cellspacing=0
-!Task
-!Yes votes
-!No votes
-|-
-| change the text 'OpenMoko' into 'Openmoko' on all pages || ||
-|-
-| change the text 'Freerunner' into 'FreeRunner' || ||
-|-
-| change the text 'Freerunners' into 'FreeRunners' || ||
-|-
-| change the text 'freerunner' into 'FreeRunner' || ||
-|-
-| change the text 'freerunners' into 'FreeRunners' || ||
-|-
-| change the text 'Om2008.8' into 'Om 2008.8' || ||
-|-
-| change the text 'Om2007.2' into 'Om 2007.2' || ||
-|}
+== DolfjeBot1 proposals ==
+Their is a bot on the openmoko wiki that's controlled by [[User:Dolfje]]. If you have tasks for the bot, please put them [[User:DolfjeBot1|here]].
 
 ==Wiki engine issues==
 Can we please install/fix the following features for this wiki:
