--- a/GTA02_revisions.mw
+++ b/GTA02_revisions.mw
@@ -1,6 +1,9 @@
-This gives you an overview of all different stages the hardware team needed, before the [[Neo FreeRunner]] was born. The internal codename of the [[Neo FreeRunner]] was GTA02.
+This page will give you an overview of all the revisions of the GTA02 hardware, both pre-release and planned future revisions. The internal codename of the [[Neo FreeRunner]] was GTA02.
+
+All Neo Freerunners that have been released to the public at this time are [[#GTA02V5|revision 5]]. (August 2008)
 
 == GTA02 specification ==
+
 The GTA02 will be a [[GTA01]] but with a major revision of everything. These components were added:
 * Wifi: Atheros 802.11 b/g
 * CPU: Samsung S3C2442 B54 SoC @ 400Mhz
