--- a/GTA02_revisions.mw
+++ b/GTA02_revisions.mw
@@ -1,6 +1,6 @@
 This page will give you an overview of all the revisions of the GTA02 hardware, both pre-release and planned future revisions. The internal codename of the [[Neo FreeRunner]] was GTA02.
 
-All Neo Freerunners that have been released to the public at this time are [[#GTA02V5|revision 5]]. (August 2008)
+All Neo Freerunners that have been released to the public at this time are [[#GTA02v5|revision 5]]. (August 2008)
 
 == GTA02 specification ==
 
