/* Problèmes connus */  s/ajouter avant/ajouter après/ + Pour résoudre les DNS sans redémarrer ...

--- a/Om_2008.8%2Ffr.mw
+++ b/Om_2008.8%2Ffr.mw
@@ -101,7 +101,12 @@ Vous pouvez installer cette distribution sur une carte microSD afin de pouvoir [
 
 
  up echo nameserver 192.168.0.200 >/etc/resolv.conf
-Cette ligne est à ajouter avant la ligne 'gateway address' et avant 'bluetooth networking'. Après la modification, il convient de redémarrer l'appareil. Ensuite, allez compléter manuellement /etc/resolv.conf en utilisant les données de ce fichier sur votre machine locale ou l'adresse DNS.
+Cette ligne est à ajouter après la ligne 'gateway address' et avant 'bluetooth networking'. Après la modification, il convient de redémarrer l'appareil. Ensuite, allez compléter manuellement /etc/resolv.conf en utilisant les données de ce fichier sur votre machine locale ou l'adresse DNS.
+
+Pour résoudre les DNS sans redémarrer, entrer les commandes suivantes :
+
+ echo nameserver 208.67.222.222 > /etc/resolv.conf
+ echo nameserver 208.67.220.220 >> /etc/resolv.conf
 
 Cela devrait résoudre la majeure partie de vos soucis de réseau. Si vous avez besoin d'autres aides, référez vous au [[USB Networking|réseau par USB]].
 
