--- a/Neo1973_Phase_2.mw
+++ b/Neo1973_Phase_2.mw
@@ -1,2 +1,2 @@
-#redirect [[Neo 1973#"Phase 2" (GTA02, "Mass Market")]]
+#REDIRECT [[GTA01:Neo 1973#"Phase 2" (GTA02, "Mass Market")]]
 There will eventually be an article here, until then redirect to the main hardware page
