--- a/Main_Page%2Fit.mw
+++ b/Main_Page%2Fit.mw
@@ -22,7 +22,7 @@ Lo stack Openmoko, che include un server X completo, consente ad utenti e svilup
 
 Il primo prodotto Openmoko, il [[Neo1973/it|Neo1973]], venduto esclusivamente tramite [https://direct.openmoko.com/ Il Negozio Online Openmoko]. Esaurito agli inizi di Febbraio 2008. 
 
-Openmoko ha iniziato la vendita del Neo FreeRunner (GTA02), la seconda versione del Neo, il 3 Luglio 2008. Aggiungi il tuo nickname a quelli interessati all'acquisto del Neo FreeRunner nella [[Buying_Interest_List| lista agli interessati all'acquisto]]. Guarda anche nei [[GroupSales|gruppi di acquisto]] per ottenere uno sconto de degli gadget extra. Se hai appena ricevuto il tuo FreeRunner, vai su [[Getting Started with your Neo FreeRunner/it|Iniziare con il tuo Neo Freerunner]] per dei consigli.
+Openmoko ha iniziato la vendita del Neo FreeRunner (GTA02), la seconda versione del Neo, il 3 Luglio 2008. Aggiungi il tuo nickname a quelli interessati all'acquisto del Neo FreeRunner nella [[Buying_Interest_List| lista agli interessati all'acquisto]]. Guarda anche nei [[GroupSales|gruppi di acquisto]] per ottenere uno sconto e dei gadget extra. Se hai appena ricevuto il tuo FreeRunner, vai su [[Getting Started with your Neo FreeRunner/it|Iniziare con il tuo Neo Freerunner]] per dei consigli.
 
 ==<font color=75d806>Sviluppa con noi Openmoko</font>==
 
