/* Inserire la scheda Micro-SD, la SIM e la Batteria */

--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -53,7 +53,7 @@ Grazie per aver comprato questa versione da Sviluppatori del Neo Freerunner. Il 
 </div>
 
 === Inserire la scheda Micro-SD, la SIM e la Batteria ===
-# Rimuovere la cover posteriore del Neo Freerunner, tenendo il dispositivo per i lati e usando l'unghia fare leva nello taglio in cima al Neo Freerunner.
+# Rimuovere la cover posteriore del Neo Freerunner, tenendo il dispositivo per i lati e usando l'unghia fare leva nel taglio in cima al Neo Freerunner.
 # Ora dovreste essere in grado di riconoscere il sistema che blocca la scheda SIM e la memoria Micro-SD, al margine con lo scomparto per la batteria.
 # Sbloccare il fissa scheda SIM facendo scivolare con l'unghia la parte metallica in giù, in direzione dell'entrata USB. Prestare attenzione poichè queste parti sono delicate e potrebbero essere danneggiate forzandole nella direzione sbagliata.
 # Sollevare il fissa scheda SIM.
