Wikipedia python library

--- a/Advertising.mw
+++ b/Advertising.mw
@@ -1,6 +1,6 @@
 == Text ==
-* There could be a description of OpenMoko/Neo1973 features
-* There could be a short story about what OpenMoko/the Neo1973 does different:
+* There could be a description of Openmoko/Neo1973 features
+* There could be a short story about what Openmoko/the Neo1973 does different:
 ** e.g.: 
  After leaving work your Neo's GPS automatically switches your Alarm Profile from 
  Silent to Loud and guides you to the next gas station. At home, your Neo automatically 
@@ -25,9 +25,9 @@ And so on...
 ** e.g.: 
  Scene: Completely blank white background.
  Two people enter the frame.
- Moko: Hi, I'm an OpenMoko
+ Moko: Hi, I'm an Openmoko
  iPhone: And I'm an iPhone
- * OpenMoko looks like he's enjoying himself
+ * Openmoko looks like he's enjoying himself
  iPhone: What are you doing?
  Moko: Oh, I just downloaded this great new game I came across. Want to try it?
  iPhone: I, er, I can't play new games. I've got this great game of solitaire, though!
@@ -45,7 +45,7 @@ And so on...
 
 == Video ==
 
-Adam Krikstone did some nice OpenMoko video ads: (youtube)
+Adam Krikstone did some nice Openmoko video ads: (youtube)
 
 [http://www.youtube.com/view_play_list?p=472DE700A3CC70A4 Playlist]
 
@@ -75,16 +75,16 @@ Adam Krikstone did some nice OpenMoko video ads: (youtube)
 
 
 == Sound empathy / Jingle ==
-* There should be some kind of jingle for OpenMoko, just like this "Hello Moto" thing from Motorola
-** [http://tetraden.te.funpic.de/openmoko/OpenMoko_free_your_phone02.ogg Number one] (suggestions/whishes? franzkautz@yahoo.de Topic: sth. with OpenMoko)
-** [http://tetraden.te.funpic.de/openmoko/OpenMoko_free_your_phone04.ogg Number two] (franzkautz@yahoo.de)
+* There should be some kind of jingle for Openmoko, just like this "Hello Moto" thing from Motorola
+** [http://tetraden.te.funpic.de/openmoko/Openmoko_free_your_phone02.ogg Number one] (suggestions/whishes? franzkautz@yahoo.de Topic: sth. with Openmoko)
+** [http://tetraden.te.funpic.de/openmoko/Openmoko_free_your_phone04.ogg Number two] (franzkautz@yahoo.de)
 
 == Thoughts, Notions ==
 === General Ideas ===
 * '''What is advertised?'''
 * If we advertise a phone by claiming it can do everything maybe no one will buy it.
 * '''Question''': Who is supposed to buy this phone?
-# '''Average Phone User''' probably only wants a phone to make calls. Why would he buy an opensource linux phone with additional command line? We ''need'' reasons for ''him'' to buy a phone running OpenMoko:
+# '''Average Phone User''' probably only wants a phone to make calls. Why would he buy an opensource linux phone with additional command line? We ''need'' reasons for ''him'' to buy a phone running Openmoko:
 #* Easy to use (not implemented though ;-)
 #* Rich and powerfull text input methods
 #* MS Outlook/whatever Sync
@@ -108,7 +108,7 @@ Something that came to me passing some mobile service provider's outlet today. T
 
 --[[User:Minime|Minime]] 16:58, 7 July 2007 (CEST)
 
-''A dude dressed in t-shirt and jeans (deja-vu?), walks through a crowded lane. Everyone except him are dressed in prison clothes and march in the opposite direction with their "closed" phones, some of the guys look at this "free" man and stare. To add to the effect we play an ambient techno music and everything is white in colour. The man walks in front of the camera, at that moment, gets a call, smiles and says "Hello World...", We then fade into the "Free your phone" and "OpenMoko" thingy as seen in the rocking youtube videos.''
+''A dude dressed in t-shirt and jeans (deja-vu?), walks through a crowded lane. Everyone except him are dressed in prison clothes and march in the opposite direction with their "closed" phones, some of the guys look at this "free" man and stare. To add to the effect we play an ambient techno music and everything is white in colour. The man walks in front of the camera, at that moment, gets a call, smiles and says "Hello World...", We then fade into the "Free your phone" and "Openmoko" thingy as seen in the rocking youtube videos.''
 
 Source: http://lists.openmoko.org/pipermail/community/2007-July/007551.html
 
@@ -152,10 +152,10 @@ Everyone wants to be an individual these days. How about something like:
  "Communicate yourself!"
 
 Wordplays are very good too.
- "OpenMoko - If you call for more."
- "OpenMoko and you will call attention."
- "OpenMoko - Don't call for help."
- "OpenMoko - With a phone jack."
+ "Openmoko - If you call for more."
+ "Openmoko and you will call attention."
+ "Openmoko - Don't call for help."
+ "Openmoko - With a phone jack."
 
 Apparently stupid statements call attention too, I think.
  "It's mobile"
@@ -168,9 +168,9 @@ See: [[Testimonials]]
 === Controversial Issues ===
 * We need to be careful about using copyrighted material (e.g. youtube)
 ** Other legal issues...?
-** Be aware of what we are advertising: What functions does OpenMoko currently feature, what is planned and what not? Are functions advertised protected by patents?
+** Be aware of what we are advertising: What functions does Openmoko currently feature, what is planned and what not? Are functions advertised protected by patents?
 * What is the community's goal in advertising? 
-** Are we advertising OpenMoko?
+** Are we advertising Openmoko?
 ** Are we advertising the Neo1973? And if so, is this our job? The Neo1973 is after all, a commerical product.
 
 [[Category:Community]]
