/* Currently missing */  gprs/gsm0710muxd/ppp works, time source for ntpd

--- a/Gsmd.mw
+++ b/Gsmd.mw
@@ -210,8 +210,11 @@ This is implemented by the functions with "_opers_" naming.
 ** read phonebook entry - ''No longer missing - see help'' 
 ** write phonebook entry - ''No longer missing - see help''
 
-* GPRS related functions
+* GPRS related functions - ''No longer missing - see [http://www.freesmartphone.org/index.php/Implementations/gsm0710muxd gsm0710muxd] for 07.10 multiplexing, and [https://wiki.muc.ccc.de/openmoko#gprs GPRS setup/de] for ppp via GPRS''
 ** set up GPRS link, use it via separate DLC of TS07.10 multiplex
+
+* GSM clock related functions
+** time output suitable for ntpd clock source?
 
 * gsmd internal infrastructure
 ** fine-grained event subscriptions (rather than wildcard-subscribe)
