/* Importing Tracks into TangoGPS */

--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -79,3 +79,8 @@ I think TangoGPS may have started working after I followed the instructions to g
 There are steps included in those instructions to improve GPS performance.  The great thing is that once you get GPRS working, you can roam with TangoGPS running and have it download maps as needed over the GPRS connection!
 
 [[Category:GPS]]
+
+== Importing Tracks into TangoGPS ==
+
+TangoGPS is able to record and store a track in its native format, and tools exist to convert this to GPX.
+However, TangoGPS does not support the import of tracks. You may help yourself by using [http://relet.net/frog/archives/68 this tool] to import GPX trackpoints as a series of POIs directly into the sqlite database which tangoGPS uses to store POIs.
