*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Linkoping.mw
+++ b/Openmoko_Local_Groups:_Linkoping.mw
@@ -10,6 +10,8 @@ Welcome to the Linköping OpenMoko page!
 |-
 |[[User:laselase|Henrik Larsson]]|| Programmering || || Valla ||  || [[Image: Moko.jpg|center]]
 |-
+|[[User:JensCarlberg|Jens Carlberg]]|| Programmering || || Ryd ||  || [[Image: Moko.jpg|center]]
+|-
 |}
 
 
