--- a/Gpe-scap.mw
+++ b/Gpe-scap.mw
@@ -1,4 +1,4 @@
-  {| align="right"
+{| align="right"
   | __TOC__
   |}
 gpe-scap is an gui-application for taking screenshots of your mobile phone. It offers the possibility of saving the taken screenshots or uploading them to http://scap.linuxtogo.org .
@@ -11,6 +11,21 @@ Alternativly one can install it via the command line with:
 = Usage =
 == Gui ==
 After installation there's an icon with the name ''"Take screenshot"'' on the mainscreen. With pressing the icon gpe-scap is started and takes a screenshot. The big disadvantage with this method is, that gpe-scap can just do a screenshot of the place where it was started and it always takes a screenshot with it's own loading-symbol which renders this method of taking a screenshot totally useless.
+
+;Workaround: Create a simple shell script, which calls gpe-scap after five seconds.
+<pre>
+sleep 5
+gpe-scap
+</pre>
+Place it in /usr/bin. chmod +x. Replace gpe-scap in the line "Execute = gpe-scap" in the file /usr/share/applications/gpe-scap.desktop with the name of the script file. Now, when you start the screenshot application via the GUI, not much will happen. You have five seconds to switch to the application you wish to capture. The gpe-scap window will automatically pop up with the current screenshot, if it was successful. 
+
+== Bugs ==
+
+Some versions of gpe-scap are unable to save or upload PNG files, due to a wrongly linked library. Try
+<pre>
+ln -s /lib/libc.so.6 /lib/libc.so
+</pre>
+
 == ssh ==
 The other and way better method of taking a screenshot with gpe-scap is doing it via ssh. For this method one has to open the window, menu or whatever he wants to take a screenshot of on his device. Then you connect via ssh to the device and execute:
  DISPLAY=:0 gpe-scap
