--- a/Gpe-scap.mw
+++ b/Gpe-scap.mw
@@ -19,14 +19,14 @@ gpe-scap
 </pre>
 Place it in /usr/bin. chmod +x. Replace gpe-scap in the line "Execute = gpe-scap" in the file /usr/share/applications/gpe-scap.desktop with the name of the script file. Now, when you start the screenshot application via the GUI, not much will happen. You have five seconds to switch to the application you wish to capture. The gpe-scap window will automatically pop up with the current screenshot, if it was successful. 
 
-== Bugs ==
+== ssh ==
+The other and way better method of taking a screenshot with gpe-scap is doing it via ssh. For this method one has to open the window, menu or whatever he wants to take a screenshot of on his device. Then you connect via ssh to the device and execute:
+ DISPLAY=:0 gpe-scap
+Now you get a perfect screenshot of whatever you want.
+
+= Bugs =
 
 Some versions of gpe-scap are unable to save or upload PNG files, due to a wrongly linked library. Try
 <pre>
 ln -s /lib/libc.so.6 /lib/libc.so
 </pre>
-
-== ssh ==
-The other and way better method of taking a screenshot with gpe-scap is doing it via ssh. For this method one has to open the window, menu or whatever he wants to take a screenshot of on his device. Then you connect via ssh to the device and execute:
- DISPLAY=:0 gpe-scap
-Now you get a perfect screenshot of whatever you want.
