Replacing 'OpenMoko' with 'Openmoko'

--- a/Artwork.mw
+++ b/Artwork.mw
@@ -15,7 +15,7 @@ save as ..
 http://i15.tinypic.com/5yd5onm.png
 
 
-=== OpenMoko "Suite" Icons Idea: ===
+=== Openmoko "Suite" Icons Idea: ===
 [[Image:Mainicon.png]]
 [[Image:Openmokosync.png]]
 [[Image:Mediatransfer.png]]
