--- a/Automatic_emulation_in_Ubuntu%2Fit.mw
+++ b/Automatic_emulation_in_Ubuntu%2Fit.mw
@@ -1,8 +1,8 @@
-Questo tutorial illustra come ottenere un ambiente di emulazione per OpenMoko su Ubuntu GNU/Linux. Per altri sistemi, leggere [[Installation_guide/it|Guida all'installazione]].
+Questo tutorial illustra come ottenere un ambiente di emulazione per Openmoko su Ubuntu GNU/Linux. Per altri sistemi, leggere [[Installation_guide/it|Guida all'installazione]].
 
 = Installazione =
 
-Esiste un potente strumento per l'emulazione di OpenMoko GNU/Linux su sistemi Linux, chiamato [[MokoMakefile/it|MokoMakefile]]. È una sorta di involucro che permette l'esecuzione di molte operazioni sul sistema che verrà emulato, e permette quindi in maniera semplice di mantenere aggiornato un sistema in costante sviluppo. Se si vuole costruire sulla propria macchina il [MokoMakefile/it|MokoMakefile]], ci sarà bisogno approssimativamente di 12 Gb, una memoria swap+ram di circa 1 Gb ed almeno 5 ore di tempo. Questa guida ha come scopo la sola compilazione con Qemu (l'emulatore che utilizzeremo) e che richiede (sul mio sistema) solo 890 Mb di spazio e 15 minuti di compilazione.
+Esiste un potente strumento per l'emulazione di Openmoko GNU/Linux su sistemi Linux, chiamato [[MokoMakefile/it|MokoMakefile]]. È una sorta di involucro che permette l'esecuzione di molte operazioni sul sistema che verrà emulato, e permette quindi in maniera semplice di mantenere aggiornato un sistema in costante sviluppo. Se si vuole costruire sulla propria macchina il [MokoMakefile/it|MokoMakefile]], ci sarà bisogno approssimativamente di 12 Gb, una memoria swap+ram di circa 1 Gb ed almeno 5 ore di tempo. Questa guida ha come scopo la sola compilazione con Qemu (l'emulatore che utilizzeremo) e che richiede (sul mio sistema) solo 890 Mb di spazio e 15 minuti di compilazione.
 
 Per farlo funzionare, ci sarà bisogno di apportare qualche piccola modifica alla propria Ubuntu (questo non danneggerà assolutamente nè Ubuntu nè i programmi, e tutto funzionerà perfettamente come prima).
 * Aprire il terminale (Menù -> Accessori / Sistema -> Terminale / Konsole).
@@ -11,9 +11,9 @@ Per farlo funzionare, ci sarà bisogno di apportare qualche piccola modifica all
 * Installare i programmi necessari (sarà necessario inserire la propria password):
     sudo apt-get install monotone git-core cogito python-dev ccache m4 sed bison make cvs gawk libc6-dev g++ subversion sharutils docbook openjade quilt libmpfr-dev libpcre3-dev texinfo texi2html libboost-date-time-dev libboost-filesystem-dev libboost-regex-dev libboost-test-dev libboost-dev zlib1g-dev build-essential dh-make debhelper devscripts gcc-3.4 lynx netpbm libsdl1.2-dev dosfstools help2man python-psyco
 
-Perfetto, ora Ubuntu è pronta per emulare OpenMoko.
+Perfetto, ora Ubuntu è pronta per emulare Openmoko.
 
-Ora installeremo OpenMoko in una cartella che creeremo appositamente, ed in cui scaricheremo e compileremo il [MokoMakefile/it|MokoMakefile]].
+Ora installeremo Openmoko in una cartella che creeremo appositamente, ed in cui scaricheremo e compileremo il [MokoMakefile/it|MokoMakefile]].
 * Creare una cartella nella propria Home:
     cd
     mkdir openmoko
@@ -23,19 +23,19 @@ Ora installeremo OpenMoko in una cartella che creeremo appositamente, ed in cui 
 * Eseguire il `make` sul MokoMakefile e comunicare che lo si vuole emulare con `qemu`:
     make qemu
 
-Questi comandi scaricheranno l'ultima versione dei file di OpenMoko e li "costruiranno" seguendo le istruzioni del MokoMakefile. Dopo ciò, si potrà avviare il sistema di emulazione per la prima volta. Possiamo dire di aver installato con successo OpenMoko sul nostro sistema Ubuntu.
+Questi comandi scaricheranno l'ultima versione dei file di Openmoko e li "costruiranno" seguendo le istruzioni del MokoMakefile. Dopo ciò, si potrà avviare il sistema di emulazione per la prima volta. Possiamo dire di aver installato con successo Openmoko sul nostro sistema Ubuntu.
 
-== Avviare OpenMoko ==
+== Avviare Openmoko ==
 * Aprire il terminale;
 * Entrare nella cartella in cui l'abbiamo installato:
     cd ~/openmoko
 * Avviare il MokoMakeFile
     make run-qemu
-Ora, si vedrà il bootloader caricare il sistema. Al termine, si potranno scegliere varie opzioni. Per selezionarne una, occorre premere Invio (=aux) e per eseguirla, la barra spaziatrice (=power). Quindi, così come appare la schermata di avvio, basterà premere direttamente la barra spaziatrice per esegure OpenMoko.
+Ora, si vedrà il bootloader caricare il sistema. Al termine, si potranno scegliere varie opzioni. Per selezionarne una, occorre premere Invio (=aux) e per eseguirla, la barra spaziatrice (=power). Quindi, così come appare la schermata di avvio, basterà premere direttamente la barra spaziatrice per esegure Openmoko.
 
 == Aggiornare Openmoko==
 * Aprire il terminale.
-* Entrare nella cartella in cui si è installato OpenMoko:
+* Entrare nella cartella in cui si è installato Openmoko:
     cd ~/openmoko
 * Aggiornare con il MokoMakefile
     make qemu
