Replacing 'OpenMoko' with 'Openmoko'

--- a/Basic_End-user.mw
+++ b/Basic_End-user.mw
@@ -2,9 +2,9 @@ Much of this wiki is aimed at the developer community who have participated in d
 
 In this section you will find information geared towards ordinary smart phone users (for example these [[Personas]]) that would like general information or would like to know about the cool features that Openmoko smart phones have.
 
-* [[Press Coverage]] - What the press says about the OpenMoko project
+* [[Press Coverage]] - What the press says about the Openmoko project
 * [[Shipping Notes]] - Information to help FIC ship phones to you
-* [[Openmoko Core Applications]] - Applications currently included in the core build of OpenMoko
+* [[Openmoko Core Applications]] - Applications currently included in the core build of Openmoko
 * [[Openmoko Community Applications]] - Cool applications shared by the Openmoko community for you to download and install
 * [[Wish List]] - A collection of ideas suggested by the Openmoko community that may get implemented someday
 * [[Wish List - Hardware]] - A collection of features we would like to see in future Openmoko phones
