Replacing 'OpenMoko' with 'Openmoko'

--- a/Basic_End-user%2Fde.mw
+++ b/Basic_End-user%2Fde.mw
@@ -1,10 +1,10 @@
 In diesm Abschnitt finden Sie Informationen, die an den üblichen Benutzer gerichtet sind. Diese werden Ihnen helfen Ihr Smartphone einzurichten oder geben Ihnen allgemeine Informationen über das Neo1973.
 
-* [[Press Coverage/de]] - Was die Presse über das OpenMoko Projekt sagt
+* [[Press Coverage/de]] - Was die Presse über das Openmoko Projekt sagt
 * [[Shipping Notes]] - Informationen, um FIC zu helfen dir Telefone zuzuschicken
 * [[Wish List]] - Sammlung von Ideen, die wir gerne irgendwann integriert sehen würden
 * [[Wish List - Hardware]] - Sammlung von Features, die wir in den nächsten Versionen des Neo1973 sehen möchten
-* [[OpenMoko compatible cellphone providers]] - Auflistung von OpenMoko-kompatiblen Anbietern rund um den Globus
+* [[Openmoko compatible cellphone providers]] - Auflistung von Openmoko-kompatiblen Anbietern rund um den Globus
 * [[Other Resources]] - Andere kostenlos erhältliche, allgemeine Informationen
 {{Languages|Basic_End-user}}
 
