Replacing 'OpenMoko' with 'Openmoko'

--- a/Basic_End-user%2Fit.mw
+++ b/Basic_End-user%2Fit.mw
@@ -1,10 +1,10 @@
 In questa sezione è possibile trovare informazioni incentrate sugli utenti che vogliono solo che il loro smartphone funzioni senza problemi o chi vuole informazioni generali relative allo smartphone.
 
-* [[Press Coverage/it|Servizio stampa]]: cosa la stampa dice del progetto OpenMoko
+* [[Press Coverage/it|Servizio stampa]]: cosa la stampa dice del progetto Openmoko
 * [[Shipping Notes/it|Note di spedizione]]: informazioni per aiutare FIC nella spedizione dei telefoni
 * [[Wish List/it|Lista dei desideri]]: una collezione di idee e di ideali che ci piacerebbe vedere implementati un giorno
 * [[Wish List - Hardware/it|Lista dei desideri - Hardware]]: una collezione di funzioni che ci piacerebbe trovare nelle prossime versioni del Neo1973
-* [[OpenMoko compatible cellphone providers/it|Operatori telefonici compatibili con OpenMoko]]: questa è una classificazione degli operatori compatibili con OpenMoko in giro per il mondo
+* [[Openmoko compatible cellphone providers/it|Operatori telefonici compatibili con Openmoko]]: questa è una classificazione degli operatori compatibili con Openmoko in giro per il mondo
 {{Languages|Basic_End-user}}
 
 [[Category:User| ]]
