--- a/Basic_End-user%2Fnl.mw
+++ b/Basic_End-user%2Fnl.mw
@@ -2,10 +2,10 @@ In dit onderdeel bevind zich informatie voor de gebruikers die hun smartphone wi
 
 * [[Press Coverage/nl|Persberichten]] - Wat de pers over de smartphone schrijft
 * [[Shipping Notes]] - Informatie om de telefoon thuis afgeleverd te krijgen
-* [[Current Applications]] - Applicaties die in de huidige "kernversie" van OpenMoko meegeleverd worden.
+* [[Current Applications]] - Applicaties die in de huidige "kernversie" van Openmoko meegeleverd worden.
 * [[Wish List]] - Een collectie ideëen die op de planning staan om geimplementeerd te worden (ooit).
 * [[Wish List - Hardware]] - Een overzicht van features die op de planning staan voor de volgende release van de Neo1973
-* [[OpenMoko compatible cellphone providers/nl|OpenMoko compatibele mobiele telefonie providers]] - Een lijst van providers die compatibel zijn met OpenMoko
+* [[Openmoko compatible cellphone providers/nl|Openmoko compatibele mobiele telefonie providers]] - Een lijst van providers die compatibel zijn met Openmoko
 * [[Other Resources]] - Andere vrij beschikbare informatiebronnen.
 {{Languages|Basic_End-user}}
 
