Replacing 'OpenMoko' with 'Openmoko'

--- a/Basic_End-user%2Fru.mw
+++ b/Basic_End-user%2Fru.mw
@@ -4,7 +4,7 @@
 * [[Shipping Notes]] - Информация о доставке телефона, возможно поможет быстрее получить телефон
 * [[Wish List]] - Список идей для воплощения в будущих моделях телефона
 * [[Wish List - Hardware]] - Список предложений относительно аппаратной части Neo1973
-* [[OpenMoko compatible cellphone providers]] - Список OpenMoko-совместимых телефонных операторов по всему миру. 
+* [[Openmoko compatible cellphone providers]] - Список Openmoko-совместимых телефонных операторов по всему миру. 
 * [[Other Resources]] - Другая информация на всякие разные темы
 {{Languages|Basic_End-user}}
 
