--- a/Basic_End-user%2Fzh_cn.mw
+++ b/Basic_End-user%2Fzh_cn.mw
@@ -1,10 +1,10 @@
 In this section you will find information geared towards users that just wants their smartphone to work without getting problems, or who want to get general information on the phone.
 
-* [[Press Coverage]] - What the press tells about the OpenMoko project
+* [[Press Coverage]] - What the press tells about the Openmoko project
 * [[Shipping Notes]] - Information to help FIC ship phones to you
 * [[Wish List]] - A collection of ideas and ideals we'd like to see implemented someday
 * [[Wish List - Hardware]] - A collection of features we woud like to see in the next revisions of the Neo1973
-* [[OpenMoko compatible cellphone providers]] - This is a breakdown of OpenMoko-compatible providers around the world
+* [[Openmoko compatible cellphone providers]] - This is a breakdown of Openmoko-compatible providers around the world
 {{Languages|Basic_End-user}}
 
 [[Category:User| ]]
