Replacing 'OpenMoko' with 'Openmoko'

--- a/Wishlist%2FBigPageWidget.mw
+++ b/Wishlist%2FBigPageWidget.mw
@@ -6,7 +6,7 @@
 
 ==Introduction==
 
-The BigPage Widget is a (proposed, not started) component that any OpenMoko application could call upon to handle the display, zooming, scrolling and interaction with pages larger than the screen in a very intuitive and useful way. In the proposed implementation, the BigPage widget would allow the application to create an offscreen 'canvas' of any size that it could render whatever information it desired to. The BigPage widget (placed somewhere on the UI of the application) would then handle the display of the page or part of the page, depending on zoom level.
+The BigPage Widget is a (proposed, not started) component that any Openmoko application could call upon to handle the display, zooming, scrolling and interaction with pages larger than the screen in a very intuitive and useful way. In the proposed implementation, the BigPage widget would allow the application to create an offscreen 'canvas' of any size that it could render whatever information it desired to. The BigPage widget (placed somewhere on the UI of the application) would then handle the display of the page or part of the page, depending on zoom level.
 
 To simplify viewing, gestures or accelerometer control could be used to zoom, change page, scroll and reposition documents. Kinetic scrolling adds significant 'realism' and intuitiveness to the experience of viewing a large page on a small screen. 
 
@@ -22,7 +22,7 @@ The strongest reasons I believe implementing such a widget makes sense are:
 
 * '''Scaling of larger pages''' to with the ability to quickly zoom in and pan in order to read detailed sections is a very natural way to interat with documents on a small screen. It is similar to the way we work with real paper, so intuitive (looking at an overview of a page and looking closer at the details we might read). 
 *Fast zooming and scaling are '''superior to reformatting webpages''' or documents that were designed to be viewed at conventional screen sizes - it makes the device more useful.
-*Given the likelihood that this method will be adopted by at least some of the applications that make up the OpenMoko platform it makes sense to have '''consistency''' in the fashion (UI, gestures) in which this kind of interaction is done (especially because to master gestures can take some time)
+*Given the likelihood that this method will be adopted by at least some of the applications that make up the Openmoko platform it makes sense to have '''consistency''' in the fashion (UI, gestures) in which this kind of interaction is done (especially because to master gestures can take some time)
 *Such a system could be fairly intensive on memory so having a single widget rather than many different implementations of the same idea will reduce memory useage/"dupliction of functionality in memory"
 *It is a '''desirable feature''' that many application developers may like to include but be unable to because of lack of experience in writing the necessary graphics code. Making it re-usable and easy to invoke allows '''cool applications to be written fast''', bringing more people to the platform as users and developers
 *It's cool!
