--- a/BitBake.mw
+++ b/BitBake.mw
@@ -1,7 +1,7 @@
 {{Languages|BitBake}}
 BitBake is the build tool used by [[OpenEmbedded]]. BitBake recipes are simple, declarative files. Here is an example for the openmoko-calculator2 application:
 
- DESCRIPTION = "A Calculator for OpenMoko"
+ DESCRIPTION = "A Calculator for Openmoko"
  SECTION = "openmoko/tools"
  DEPENDS = "libmokoui2"
  PV = "0.1.0+svnr${SRCREV}"
