Replacing 'OpenMoko' with 'Openmoko'

--- a/BitBake%2Fzh_cn.mw
+++ b/BitBake%2Fzh_cn.mw
@@ -1,7 +1,7 @@
 {{Languages|BitBake}}
 BitBake是[[OpenEmbedded]]用来建立build的工具。以下是一个openmoko-calculator2应用程序：
 
- DESCRIPTION = "A Calculator for OpenMoko"
+ DESCRIPTION = "A Calculator for Openmoko"
  SECTION = "openmoko/tools"
  DEPENDS = "libmokoui2"
  PV = "0.1.0+svnr${SRCREV}"
