Replacing 'OpenMoko' with 'Openmoko'

--- a/BitBake%2Fzh_tw.mw
+++ b/BitBake%2Fzh_tw.mw
@@ -1,7 +1,7 @@
 {{Languages|BitBake}}
 BitBake是[[OpenEmbedded]]用來建立build的工具。以下是一個openmoko-calculator2應用程式：
 
- DESCRIPTION = "A Calculator for OpenMoko"
+ DESCRIPTION = "A Calculator for Openmoko"
  SECTION = "openmoko/tools"
  DEPENDS = "libmokoui2"
  PV = "0.1.0+svnr${SRCREV}"
