Replacing 'OpenMoko' with 'Openmoko'

--- a/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
+++ b/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
@@ -80,7 +80,7 @@ or if you are using the MokoMakefile:
  
  make openmoko-devel-image
 
-After the process finished there will be a ''OpenMoko-....tar'' in the deploy directory, which is your newly created rootfs archive
+After the process finished there will be a ''Openmoko-....tar'' in the deploy directory, which is your newly created rootfs archive
 
 === Possibility 3 : Convert a jff2 image to a tarfile ===
 
