Replacing 'OpenMoko' with 'Openmoko'

--- a/U-Boot%2Fru.mw
+++ b/U-Boot%2Fru.mw
@@ -191,7 +191,7 @@ Device Descriptor:
   idVendor           0x1457 
   idProduct          0x5119 
   bcdDevice            0.00
-  iManufacturer           1 OpenMoko, Inc
+  iManufacturer           1 Openmoko, Inc
   iProduct                2 Neo1973 Bootloader U-Boot 1.2.0-g6c7cac8c-dirty-moko3
   iSerial                 3 0000000
   bNumConfigurations      1
@@ -408,7 +408,7 @@ GTA01Bv3 # nand read 0x32000000 kernel
 NAND read: device 0 offset 212992, size 2097152 ...  2097152 bytes read: OK
 GTA01Bv3 # bootm 0x32000000
 ## Booting image at 32000000 ...
-   Image Name:   OpenMoko Kernel Image Neo1973
+   Image Name:   Openmoko Kernel Image Neo1973
    Created:      2007-02-15  23:54:18 UTC
    Image Type:   ARM Linux Kernel Image (gzip compressed)
    Data Size:    1546258 Bytes =  1.5 MB
