--- a/U-Boot%2Fzh_cn.mw
+++ b/U-Boot%2Fzh_cn.mw
@@ -6,7 +6,7 @@
 
 [[Image:Neo1973 uboot splash closeup.jpg|thumb|300px|u-boot splash screen on Neo1973]]
 
-[[Neo1973]]上的bootloader  '''U-Boot'''，在 [[Openmoko]]启动之前负责设备的功能运作，包括用来[[Flashing openmoko/zh|烧写OpenMokoFLASH]]的 [[USB DFU]]、屏幕显示、启动选单、[[bootloader commands|bootloader 命令]] 控制台、通过[[bootloader environment|bootloader 环境]]配置和加载[[kernel | 内核]]等。
+[[Neo1973]]上的bootloader  '''U-Boot'''，在 [[Openmoko]]启动之前负责设备的功能运作，包括用来[[Flashing openmoko/zh|烧写OpenmokoFLASH]]的 [[USB DFU]]、屏幕显示、启动选单、[[bootloader commands|bootloader 命令]] 控制台、通过[[bootloader environment|bootloader 环境]]配置和加载[[kernel | 内核]]等。
 
 
 有不同的[[bootloader versions|bootloader版本]]可供使用：
@@ -188,7 +188,7 @@ Device Descriptor:
   idVendor           0x1457 
   idProduct          0x5119 
   bcdDevice            0.00
-  iManufacturer           1 OpenMoko, Inc
+  iManufacturer           1 Openmoko, Inc
   iProduct                2 Neo1973 Bootloader U-Boot 1.2.0-g6c7cac8c-dirty-moko3
   iSerial                 3 0000000
   bNumConfigurations      1
