Replacing 'OpenMoko' with 'Openmoko'

--- a/U-Boot%2Fzh_tw.mw
+++ b/U-Boot%2Fzh_tw.mw
@@ -185,7 +185,7 @@ Device Descriptor:
   idVendor           0x1457 
   idProduct          0x5119 
   bcdDevice            0.00
-  iManufacturer           1 OpenMoko, Inc
+  iManufacturer           1 Openmoko, Inc
   iProduct                2 Neo1973 Bootloader U-Boot 1.2.0-g6c7cac8c-dirty-moko3
   iSerial                 3 0000000
   bNumConfigurations      1
